VolcanManager: Endpoint IntraExtraEspeciales
